# Shard

./: .gitignore  .gitmodules  COPYING  INSTALL  INSTALL.md  Makefile.am  README.md  configure.ac  groestlcoin.sln  groestlcoin.wxs  libgroestlcoinconsensus.pc  libgroestlcoinconsensus.pc.in  libshardconsensus.pc  libshardconsensus.pc.in  setup.mak  shard.sln  shard.wxs  windows.mak
build-aux/m4/: bitcoin_find_bdb48.m4  groestlcoin_qt.m4  shard_qt.m4
contrib/: groestlcoind.bash-completion  shard.bash-completion
contrib/debian/: README.md  changelog  control  copyright  groestlcoin-qt.desktop  groestlcoin-qt.install  groestlcoin-qt.lintian-overrides  groestlcoin-qt.protocol  groestlcoind.bash-completion  groestlcoind.examples  groestlcoind.install  groestlcoind.lintian-overrides  groestlcoind.manpages  rules  shard-qt.desktop  shard-qt.install  shard-qt.lintian-overrides  shard-qt.protocol  shardd.bash-completion  shardd.examples  shardd.install  shardd.lintian-overrides  shardd.manpages  watch
contrib/debian/examples/: groestlcoin.conf  shard.conf
contrib/debian/manpages/: groestlcoin-cli.1  groestlcoin-qt.1  groestlcoind.1
contrib/gitian-keys/: petertodd-key.pgp
contrib/init/: README.md  groestlcoind.conf  groestlcoind.init  groestlcoind.openrc  groestlcoind.openrcconf  groestlcoind.service  shardd.conf  shardd.init  shardd.openrc  shardd.openrcconf  shardd.service
contrib/linearize/: example-linearize.cfg  linearize-hashes.py
contrib/macdeploy/: background.psd  background.tiff  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/macdeploy/Base.lproj/: InfoPlist.strings
contrib/qos/: README.md  tc.sh
contrib/rpm/: bitcoin.spec
contrib/seeds/: generate-seeds.py  nodes_main.txt  nodes_test.txt
contrib/spendfrom/: spendfrom.py
contrib/zmq/: zmq_sub.py
depends/: README.md
doc/: README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  groestlcoin_lic.rtf  init.md  shard_lic.rtf  tor.md  zmq.md
doc/release-notes/: release-notes-0.11.0.md  release-notes-2.11.0.md  release-notes-2.13.3.md
qa/pull-tester/: run-groestlcoin-cli  run-groestlcoind-for-test.sh.in  run-shard-cli
qa/rpc-tests/: proxy_test.py  rawtransactions.py  zmq_test.py
share/: setup.nsi.in
share/qt/: Info.plist.in  make_windows_icon.sh
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  base58.cpp  base58.h  bignum.h  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  cuckoocache.h  groestlcoin-cli-res.rc  groestlcoin-cli.cpp  groestlcoin-cli.vcxproj  groestlcoin-cli.vcxproj.filters  groestlcoin-common.vcxproj  groestlcoin-common.vcxproj.filters  groestlcoin-dll.cpp  groestlcoin-hash.cpp  groestlcoin-qt.vcxproj  groestlcoin-qt.vcxproj.filters  groestlcoin-tx-res.rc  groestlcoin-tx.cpp  groestlcoin-tx.vcxproj  groestlcoin-tx.vcxproj.filters  groestlcoin.cpp  (+60 more)
src/cfg/vs/: vs-inc.props  vs-ver.props
src/config/: bitcoin-config.h  bitcoin-config.h.in
src/consensus/: consensus.h  params.h
src/el/bignum/x86x64/: montgomery_mul_x86x64.asm
src/primitives/: block.cpp  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  moc.proj  networkstyle.cpp  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  paymentserver.cpp  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsentry.cpp  splashscreen.cpp  stdafx.cpp  stdafx.h  transactionrecord.cpp  utilitydialog.cpp  walletmodel.cpp
src/qt/forms/: coincontroldialog.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_ach.ts  bitcoin_af.ts  bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bg_BG.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cmn.ts  bitcoin_cs.ts  bitcoin_cs_CZ.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_en_GB.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_AR.ts  bitcoin_es_CL.ts  bitcoin_es_CO.ts  bitcoin_es_DO.ts  bitcoin_es_ES.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_es_VE.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_fr_FR.ts  bitcoin_gl.ts  (+51 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/res/icons/: groestlcoin.icns
src/qt/test/: test_main.cpp
src/rpc/: blockchain.cpp  mining.cpp  misc.cpp  net.cpp  rawtransaction.cpp  server.cpp
src/script/: groestlcoinconsensus.cpp  interpreter.cpp  shardconsensus.cpp  standard.cpp
src/secp256k1/src/: libsecp256k1-cfg.h  num_gmp.h  num_gmp_impl.h
src/sphlib/: groestl.c  groestl.cpp
src/src/cfg/vs/: vs-ver.props
src/test/: Makefile  alert_tests.cpp  bitcoin-util-test.py  main_tests.cpp  script_tests.cpp
src/test/data/: base58_keys_valid.json  bitcoin-util-test.json
src/wallet/: rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  walletdb.cpp
